Fix video size and scrollbar weirdness in Firefox.

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
 	background-color: #000;
 	color: #fff;
 	font: 14px arial,sans-serif;
+	overflow: hidden;
 }
 a, a:visited {
 	color: #a1e2ff;
@@ -233,10 +234,14 @@ li {
 	position: fixed;
 	left: 100%;
 	top: 100%;
+	width: 100%;
+	height: 100%;
 }
 /* When a slide is active, the current slide, then we just position it normally. */
 .slide.activeSlide {
-	position: relative;
+	position: absolute;
+	left: 0;
+	top: 0;
 }
 .fadeOut, .fadeOut.transparent {
 	opacity: 0;
@@ -312,10 +317,11 @@ li {
 /* full-bleed slide backgrounds */
 
 .fullscreen {
-	position: fixed; 
-	top: 0; 
+	position: absolute;
+	top: 0;
 	left: 0;
 	right: 0;
+	bottom: 0;
 	-webkit-transition: all 2s ease-in-out;
   	-moz-transition: all 2s ease-in-out;
   	-o-transition: all 2s ease-in-out;
@@ -365,7 +371,7 @@ li {
 }
 .columns {
 	z-index: 100;
-	position: fixed;
+	position: absolute;
 	left: 10px;
 	right: 10px;
 	top: 40px;
@@ -410,8 +416,8 @@ li {
 /* Map elements */
 
 .mapOverlay {
-	position: absolute; 
-	top: 0; 
+	position: absolute;
+	top: 0;
 	left: 0;
 	right: 0;
 	overflow: hidden;
@@ -470,10 +476,10 @@ a.mapCaption:hover {
 	font-family: ChaparralPro-Regular;
 	font-size: 40px;
 	text-shadow:
-   	-1px -1px 5px #000,  
-    1px -1px 5px #000,
-    -1px 1px 5px #000,
-    1px 1px 5px #000;
+   	-1px -1px 5px #000,
+	1px -1px 5px #000,
+	-1px 1px 5px #000,
+	1px 1px 5px #000;
 	font-weight: bold;
 }
 .mapTitle p {
